<resources>
    <string name="app_name">PrepNest</string>
    <string name="btn_login">Log in</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_create_acc">Create now</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_user_name">Your Full Name</string>
    <string name="hint_courses">Courses</string>
    <string name="hint_semester">Semester</string>
    <string name="hint_year">Year</string>
    <string name="hint_phone">Phone number</string>
    <string name="def_user_name">PrepNest User</string>
    <string name="def_user_email">abc123@gmail.com</string>
    <string name="def_user_phone">9998887770</string>
    <string name="country_code">+91</string>
    <string name="tap_to_copy">Tap to copy</string>
    <string name="coins">Coins</string>
    <string name="cash">Cash</string>
    <string name="empty_history_message">No transaction history</string>
    <string name="send_request">Submit request</string>
    <string name="search">Search</string>
    <string name="hint_amount">Enter amount</string>
    <string name="no_resources_found_message">No resources here to show</string>
    <string name="provider_eligible_message">You are now eligible to become a provider. Please submit your request by clicking the button below.</string>
    <string name="provider_not_eligible_message">Your profile doesn\'t currently meet the eligibility criteria to become a provider. Please review and update your profile to try again.</string>
    <string name="see_eligibility_issues">See eligibility issues</string>
    <string name="no_purchase_message">You haven\'t purchased any resources yet. Once you make a purchase, your resources will appear here.</string>
    <string name="no_upload_access_message">To upload resources, you need to become a provider first. Tap the button below to submit your request.</string>
    <string name="no_uploaded_resource_message">No resources uploaded yet. Start sharing your content to see it listed here.</string>
    <string name="become_provider">Become a provider</string>
    <string name="pending_provider_verification_message">Your request to become a provider has been successfully submitted for verification. The process typically takes 1–2 business days.</string>
    <string name="failed_provider_verification_message">Your request to become a provider could not be verified. You may submit a request for re-verification, or choose to cancel your provider request.</string>
    <string name="resend_provider_verification_message">Your request to become a provider could not be verified. You may submit a request for re-verification, or choose to cancel your provider request from the home tab.</string>
    <string name="filter_title">Filter</string>
    <string name="filter_by_date_title">Sort by Date :</string>
    <string name="filter_by_type_title">Filter by Type :</string>
    <string name="filter_by_rating_title">Sort by Rating :</string>
    <string name="date_sort_recent">Most Recent First</string>
    <string name="date_sort_old">Oldest First</string>
    <string name="type_sort_mid">Midterm</string>
    <string name="type_sort_both">Both</string>
    <string name="rating_sort_high">High to Low</string>
    <string name="rating_sort_low">Low to High</string>
    <string name="sign_up_subtext">Create an account to access all\nthe resources</string>
    <string name="login_subtext">Log in back to your account</string>
    <string name="no_wishlist_msg">Nothing here yet — add resource items to your wishlist to view them here</string>
    <string name="app_introduction_msg">PrepNest is a platform where students can discover and share previous year question papers to boost their exam performance.</string>
    <string name="app_upload_information_msg">Got helpful question papers? Share them on PrepNest at your own price—others can purchase and access them directly.</string>
    <string name="app_earn_coins_msg">Earn coins by referring new users, uploading papers, or purchasing any.</string>
    <string name="resource_type_title">Resource type</string>
    <string name="pyq_type_title">Paper type</string>
    <string name="midterm_type_title">Mid-term type</string>
    <string name="upload_guidance_title">Upload guidance</string>
    <string name="upload_guidance_message">1. Enter the subject name for which you want to upload the Paper.\n\n2. Provide the course name, semester. If these details match your profile, they will be fetched automatically; otherwise, you can enter them manually.\n\n3. Select the paper type — either Semester paper or Midterm.\n\n4. If you\'ve selected Question Paper, choose the relevant session.\n\n5. If the Question Paper is for a midterm exam, select the midterm type — e.g., 1st, 2nd, or 3rd.\n\n6. Attach the files:\n&#8226; For Question Papers, only image files (photos) are allowed.\n\nNote : \n&#8226; Providing false information intentionally could result in an account ban.\n&#8226; The price for your paper will be automatically set by our team</string>
    <string name="select_price_range_title">Select price range</string>
    <string name="select_price_note">The amount can be changed by our team during verification</string>
    <string name="app_maintenance_message">We are currently undergoing maintenance to make your experience even better, the app will be closed during this process. we\'ll be back soon</string>
    <string name="new_app_message">We\'ve made improvements to make your experience even better.</string>
    <string name="see_changes">See changes</string>
    <string name="download">Download</string>
    <string name="new_update_available">New update available!</string>
    <string name="my_profile">My profile</string>
    <string name="my_resources">My resources</string>
    <string name="wishlist">Wishlist</string>
    <string name="become_a_provider">Become a provider</string>
    <string name="upload_a_resource">Upload a resource</string>
    <string name="my_uploaded_resources">My uploaded resources</string>
    <string name="refer_and_earn">Refer and earn</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Logout</string>
    <string name="how_to_add_cash">How to add cash?</string>
    <string name="upi_app_explain">Step 1 - Use any UPI-enabled app (e.g., Google Pay, PhonePe, Paytm) to scan the QR code shown below.</string>
    <string name="step_2_make_the_payment_using_your_preferred_upi_app">Step 2 - Make the payment using your preferred UPI app.</string>
    <string name="step_3_after_a_successful_transaction_take_a_screenshot_of_the_payment_confirmation">Step 3 - After a successful transaction, take a screenshot of the payment confirmation.</string>
    <string name="step_4_upload_the_screenshot_in_the_section_below_to_submit_your_payment_for_verification">Step 4 - Upload the screenshot in the section below to submit your payment for verification.</string>
    <string name="minimum_amount_could_be_added_is_10">Minimum amount could be added is ₹10.</string>
    <string name="attach_screenshot">Attach Screenshot</string>
    <string name="select_screenshot">Select screenshot</string>
    <string name="note_your_account_will_be_updated_once_the_payment_is_verified_usually_within_1_2_days">Note: Your account will be updated once the payment is verified (usually within 1–2 days).</string>
    <string name="referral">Referral</string>
    <string name="skip">Skip</string>
    <string name="enter_referral_code">Enter referral code</string>
    <string name="invalid_referral_code">Invalid referral code</string>
    <string name="add_referral">Add referral</string>
    <string name="maintenance">Maintenance</string>
    <string name="not_eligible">Not eligible</string>
    <string name="eligible">Eligible</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="profile_picture_is_uploaded">Profile picture is uploaded</string>
    <string name="profile_picture_is_not_uploaded">Profile picture is not uploaded</string>
    <string name="phone_number_is_linked">Phone number is linked</string>
    <string name="phone_number_is_not_linked">Phone number is not linked</string>
    <string name="email_address_is_verified">Email address is verified</string>
    <string name="email_address_is_not_verified">Email address is not verified</string>
    <string name="coins_conversion_rate">5 coins = ₹1</string>
    <string name="add_cash">Add cash</string>
    <string name="request_payout">Request payout</string>
    <string name="transaction_history">Transaction history</string>
    <string name="oops_got_a_problem">Oops! got a problem</string>
    <string name="app_crash_message">The app is crashed due to unexpected error, send us a report from clicking a button below to help us fix this out or just you can ignore it</string>
    <string name="send_report">Send report</string>
    <string name="exit_from_app">Exit from app</string>
    <string name="eligibility_issues">Eligibility issues</string>
    <string name="fix_now">Fix now</string>
    <string name="log_in">Log In</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="doesn_t_have_an_account">Doesn\'t have an account ?</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="oops">Oops!</string>
    <string name="no_connection_message">You\'re offline. Connect to a\nstable internet connection and try again.</string>
    <string name="retry">Retry</string>
    <string name="refer_and_earn_message">Both of you will be rewarded after a successful referral — you\'ll receive 50 coins, and your friend will get 10 coins when they purchase their first resource item.</string>
    <string name="total_reffered_users">Total reffered users</string>
    <string name="refer_now">Refer now</string>
    <string name="request_payout_note">Note: The amount will be credited to your account once the request is verified (usually within 1-2 days).</string>
    <string name="session">Session</string>
    <string name="subject">Subject</string>
    <string name="type">Type</string>
    <string name="rating">Rating</string>
    <string name="uploaded_on">Uploaded on</string>
    <string name="best_choice">Best choice</string>
    <string name="recommend">Recommend</string>
    <string name="price">Price</string>
    <string name="choose_payment_method">Choose payment method</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="resources">Resources</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="reset_all">Reset All</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="discontinue">Discontinue</string>
    <string name="view_details">View Details</string>
    <string name="my_wishlist">My wishlist</string>
    <string name="profile">Profile</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="remove_profile">Remove profile</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="upload">Upload</string>
    <string name="select_your_course">Select your course</string>
    <string name="password_did_not_match">Password did not match</string>
    <string name="read_our">Read our</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="have_an_account">Have an account ?</string>
</resources>