<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/wrapper_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/signup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_signup"
        android:textSize="30sp"
        android:textColor="#000000"
        android:fontFamily="@font/bold"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="30dp"
        android:includeFontPadding="false"/>

    <TextView
        android:id="@+id/signup_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="150dp"
        android:text="@string/sign_up_subtext"
        android:textSize="12sp"
        android:textColor="#9E9E9E"
        android:fontFamily="@font/semibold"
        android:includeFontPadding="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_title"
        android:layout_marginStart="30dp"
        android:layout_marginTop="3dp"/>

    <LinearLayout
        android:id="@+id/edittexts_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_subtitle"
        app:layout_constraintBottom_toTopOf="@id/bottom_container">

        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:paddingLeft="10dp"
            android:paddingTop="12dp"
            android:paddingRight="10dp"
            android:paddingBottom="12dp"
            android:background="@drawable/rounded_shape_gray"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:textColor="#000000"
            android:hint="@string/hint_user_name"
            android:textColorHint="#9E9E9E"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:fontFamily="@font/semibold"
            android:inputType="textCapWords" />
        <TextView
            android:id="@+id/name_error_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/enter_your_name"
            android:textSize="10sp"
            android:textColor="#000000"
            android:fontFamily="@font/medium"
            android:visibility="gone"
            android:includeFontPadding="false"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:id="@+id/other_details_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/course_select_container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:background="@drawable/ripple_bg_gray">

                <TextView
                    android:id="@+id/course_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/hint_courses"
                    android:textSize="12sp"
                    android:textColor="#9E9E9E"
                    android:layout_weight="1"
                    android:fontFamily="@font/semibold"
                    android:includeFontPadding="false"
                    tools:ignore="NestedWeights" />

                <ImageView
                    android:id="@+id/down_arrow_icon_1"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/icon_down_arrow"
                    android:scaleType="fitCenter" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/semester_select_container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:background="@drawable/ripple_bg_gray">

                <TextView
                    android:id="@+id/semester_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/hint_semester"
                    android:textSize="12sp"
                    android:textColor="#9E9E9E"
                    android:layout_weight="1"
                    android:fontFamily="@font/semibold"
                    android:includeFontPadding="false"
                    tools:ignore="NestedWeights" />

                <ImageView
                    android:id="@+id/down_arrow_icon_2"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/icon_down_arrow"
                    android:scaleType="fitCenter" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/other_details_error_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/select_your_course"
            android:textSize="10sp"
            android:textColor="#000000"
            android:fontFamily="@font/medium"
            android:visibility="gone"
            android:includeFontPadding="false"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:importantForAutofill="no"
            android:paddingLeft="10dp"
            android:paddingTop="12dp"
            android:paddingRight="10dp"
            android:paddingBottom="12dp"
            android:background="@drawable/rounded_shape_gray"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:textColor="#000000"
            android:hint="@string/hint_email"
            android:textColorHint="#9E9E9E"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:fontFamily="@font/semibold"
            android:inputType="textEmailAddress" />
        <TextView
            android:id="@+id/email_error_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/enter_your_email"
            android:textSize="10sp"
            android:textColor="#000000"
            android:fontFamily="@font/medium"
            android:visibility="gone"
            android:includeFontPadding="false"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:importantForAutofill="no"
            android:paddingLeft="10dp"
            android:paddingTop="12dp"
            android:paddingRight="10dp"
            android:paddingBottom="12dp"
            android:background="@drawable/rounded_shape_gray"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:textColor="#000000"
            android:hint="@string/hint_password"
            android:textColorHint="#9E9E9E"
            android:singleLine="true"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:fontFamily="@font/semibold" />
        <TextView
            android:id="@+id/password_error_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/enter_your_password"
            android:textSize="10sp"
            android:textColor="#000000"
            android:fontFamily="@font/medium"
            android:visibility="gone"
            android:includeFontPadding="false"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:id="@+id/confirm_pwd_et_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/rounded_shape_gray">

            <EditText
                android:id="@+id/confirm_pwd_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:textSize="12sp"
                android:textColor="#000000"
                android:hint="@string/hint_confirm_password"
                android:textColorHint="#9E9E9E"
                android:singleLine="true"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:layout_weight="1"
                android:fontFamily="@font/semibold" />

            <ImageView
                android:id="@+id/pwd_show_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/icon_show_password"
                android:scaleType="fitCenter" />
        </LinearLayout>
        <TextView
            android:id="@+id/confirm_pwd_error_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/password_did_not_match"
            android:textSize="10sp"
            android:textColor="#000000"
            android:fontFamily="@font/medium"
            android:visibility="gone"
            android:includeFontPadding="false"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/ripple_bg_black">

            <TextView
                android:id="@+id/signup_btn_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/btn_signup"
                android:textSize="14sp"
                android:textColor="#FFFFFF"
                android:fontFamily="@font/bold"
                android:includeFontPadding="false"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/terms_policy_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/read_our_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_our"
                android:textSize="11sp"
                android:textColor="#9E9E9E"
                android:fontFamily="@font/semibold"
                android:includeFontPadding="false"/>

            <TextView
                android:id="@+id/terms_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/terms_amp_conditions"
                android:textSize="12sp"
                android:textColor="#000000"
                android:fontFamily="@font/semibold"
                android:background="@drawable/ripple_mask_only_light"
                android:includeFontPadding="false"/>

            <TextView
                android:id="@+id/and_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/and"
                android:textSize="11sp"
                android:textColor="#9E9E9E"
                android:fontFamily="@font/semibold"
                android:includeFontPadding="false"/>

            <TextView
                android:id="@+id/privacy_policy_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/privacy_policy"
                android:textSize="12sp"
                android:textColor="#000000"
                android:fontFamily="@font/semibold"
                android:background="@drawable/ripple_mask_only_light"
                android:includeFontPadding="false"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/have_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account"
            android:textSize="12sp"
            android:textColor="#9E9E9E"
            android:fontFamily="@font/semibold"
            android:includeFontPadding="false"/>

        <TextView
            android:id="@+id/login_btn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="2dp"
            android:paddingRight="5dp"
            android:paddingBottom="2dp"
            android:text="@string/btn_login"
            android:textSize="14sp"
            android:textColor="#000000"
            android:fontFamily="@font/semibold"
            android:background="@drawable/ripple_mask_only_light"
            android:includeFontPadding="false"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>